@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-14T08:11:15Z",
+  "timestamp" : "2023-07-14T16:10:43Z",
   "count_outdated" : 4780,
   "uniques_outdated" : 1379,
-  "count" : 4844,
-  "uniques" : 1419,
+  "count" : 4853,
+  "uniques" : 1425,
   "clones" : [
     {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-07-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 11,
+      "count_minmax": [ 2, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 8,
+      "uniques_minmax": [ 2, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
