@@ -1,10 +1,10 @@
 {
-  "count": 63,
-  "uniques": 32,
+  "count": 71,
+  "uniques": 37,
   "clones": [
     {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2023-07-14T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 11,
+      "uniques": 8
     }
   ]
 }
