@@ -1,3 +1,12 @@
+2023-07-14T16:10:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5556068011 # 1723
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
+* notice: last 14d: unq all: 37 71
+* notice: prev accum: outdated-unq outdated-all / unq all: 1379 4780 / 1419 4844
+* notice: next accum: outdated-unq outdated-all / unq all: 1379 4780 / 1425 4853
+* notice: prev exec diff / last date diff / accum: unq all: +6 +9 -0 -1 / +8 +11 -0 -0 / 8 11
+* notice: removed / changed dates: [] / [2023-06-30 2023-07-14]
+
 2023-07-14T08:11:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5551960174 # 1722
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
